# komaru-the-game

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  build_and_run.sh
include/: MainMenu.h  SettingsMenu.h
scripts/: build.sh  build_and_run.sh
src/: MainMenu.cpp  SettingsMenu.cpp  main.cpp
